# RepoBrain

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RULES.md  SECURITY.md  SKILLS.md  chat.cmd  docker-compose.yml  feat.md  pyproject.toml  repobrain.toml  report.cmd
.github/workflows/: ci.yml  release.yml
docker/: entrypoint.sh
docs/: backlog.md  cli.md  config.md  contracts.md  demo-script.md  gemini-fallback-handoff.md  implementation-plan.md  install.md  mcp.md  production-readiness.md  release-checklist.md  releases.md  review-vi.md  run.md  self-review.md  ux.md
docs-for-repobrain/: README.md
docs-for-repobrain/docs/: architecture.md  auto-file-context-plan-2026-04-19.md  cli.md  config.md  contracts.md  decision-log.md  demo-script.md  docker.md  evaluation.md  gemini-fallback-handoff.md  hidemium-chatbot-plan.md  install.md  mcp.md  meeting-status-2026-04-19.md  model-provider-roadmap.md  product-spec.md  production-readiness.md  progress-artifact-inspection-2026-04-18.md  progress-release-validation-2026-04-18.md  progress-remote-release-validation-2026-04-18.md  release-checklist.md  releases.md  roadmap.md  run.md  ux.md  vision.md
docs-for-repobrain/src/: App.css  App.tsx  content.ts  index.css
smoke_workspace/: report.html
src/repobrain/: __init__.py  __main__.py  active_repo.py  cli.py  (+9 more)
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_mcp_server.py  test_providers.py  test_review_store.py  test_scanner.py  test_web.py
webapp/: build.mjs  package-lock.json
(+73 files in other folders)
